# ComputerGraphics-Project1

./: .gitignore  CMakeLists.txt  README.txt  main.cpp
src/: cmd_options.h  main.cpp  old.cpp  ply.h  plyfile.cpp
